# Gmail-Summarize-Agent

./: .gitignore  agent.py  chain.py  config.py  gmail_agent_test.ipynb  gmailagent.py  log.md  log.txt  main.py  parsers.py  pyproject.toml  quickstart.py  readme.md  run.bat  temp.py  test.ipynb  test.py
test/: gmail_agent_test.ipynb
