[project]
name = "gmail-summarize-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.163.0",
    "google-auth-oauthlib>=1.2.1",
    "langchain>=0.3.20",
    "langchain-community>=0.3.19",
    "langchain-google-genai>=2.0.11",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.5",
]
